fix swager and cors bugs
